# delivery-time-prediction

./: Makefile  README.md  pyproject.toml
.github/workflows/: run_test.yaml
docs/src/: app.md  config.md  index.md  process.md  run_notebook.md  train_model.md
docs/src/utils/: convert_jsonl_to_csv.md  index.md
notebooks/: data_analysis.ipynb  data_analysis_results.ipynb
src/: TimeDiffConstants.py  TimeDiffDataTransformer.py  TimeDiffModel.py  __init__.py  app.py  config.py  main.py  model_training.py  process.py  train_model.py
src/example_post_requests/: example_post.json  example_post2.json  example_post3.json  example_post4.json
src/template_src/: process.py
src/utils/: convert_jsonl_to_csv.py
tests/: test_process.py
